test: timezone support for local time

--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
   "license": "MIT",
   "scripts": {
     "test": "./node_modules/.bin/mocha test/**/*-test.js --reporter dot"
+  },
+  "dependencies": {
+    "moment": "^2.29.3",
+    "moment-timezone": "^0.5.34"
   }
 }
